<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_margin="10dp"
        android:background="#554B4B"
        tools:ignore="ExtraText"
        android:contentDescription="@string/f" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="125dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="159dp"
        android:background="#56515C"
        android:contentDescription="@string/u" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="125dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="159dp"
        android:background="#56515C"
        android:contentDescription="@string/j" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="125dp"
        android:layout_marginStart="289dp"
        android:layout_marginTop="159dp"
        android:background="#56515C"
        android:contentDescription="@string/g" />

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="125dp"
          android:layout_gravity="center"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:background="#9990A3"
          android:contentDescription="@string/h" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="125dp"
          android:text="@string/dian_pratiwi_08"
          android:textSize="30sp"
          android:textStyle="bold"
          android:gravity="center"
          android:layout_marginTop="300dp"
          android:layout_marginStart="10dp"/>

      <ImageView
          android:layout_width="120dp"
          android:layout_height="125dp"
          android:layout_marginStart="10dp"
          android:layout_marginTop="450dp"
          android:background="#56515C"
          android:contentDescription="@string/todo" />

      <ImageView
          android:layout_width="120dp"
          android:layout_height="125dp"
          android:layout_marginStart="145dp"
          android:layout_marginTop="450dp"
          android:background="#56515C"
          android:contentDescription="@string/o" />

      <ImageView
          android:layout_width="120dp"
          android:layout_height="125dp"
          android:layout_marginStart="289dp"
          android:layout_marginTop="450dp"
          android:background="#56515C"
          android:contentDescription="@string/t" />

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="125dp"
          android:background="#554B4B"
          android:layout_marginTop="595dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_marginBottom="10dp"
          android:contentDescription="@string/d" />
  </FrameLayout>

</RelativeLayout>